turned off doclint for jdk 1.8

--- a/diffparser/pom.xml
+++ b/diffparser/pom.xml
@@ -89,6 +89,9 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <additionalparam>-Xdoclint:none</additionalparam>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-source-plugin</artifactId>
